entity class removed @setter -> replace factory method in DTO class + @getter/field naming modified + refactoring entity/service/repository class 26/02/05